tests/type-errors/for_ident_double_list.arl
archetype for_ident_double_list

entry exec () {
  effect {
    var l : int list = [1; 2; 3];
    for (k, v) in l do
      ()
    done
  }
}
